scrolling issue on mobile is fixed

--- a/assets/src/css/main.css
+++ b/assets/src/css/main.css
@@ -44,7 +44,7 @@
   }
 
   body {
-    @apply font-roboto overflow-hidden antialiased;
+    @apply font-roboto overflow-x-hidden antialiased;
   }
 
   h1,
